--- a/app/(pages)/layout.module.css
+++ b/app/(pages)/layout.module.css
@@ -2,4 +2,6 @@
     display: flex;
     width: 100vw;
     height: 100vh;
+    position: relative;
+    z-index: 0;
 }
