--- a/app/components/Sidebar.module.css
+++ b/app/components/Sidebar.module.css
@@ -1,21 +1,28 @@
-.sidebarArea{
-    display: flex;
-    width: 280px;
-    height: 100vh;
-    background-color: #2d2d2d;
-    align-items: center;
-    flex-direction: column;
-    font-size: 18px;
+.sidebarArea {
     position: fixed;
-    z-index: 888;
-    overflow-y: auto;
+    width: 280px;
+    height: 100%;
+    background-color: #2d2d2d;
+    font-size: 18px;
+    z-index: 80;
+}
+
+.sidebarContent {
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
     scrollbar-width: none;     /* Hide scrollbar for Firefox */
-
 }
-.sidebarArea::-webkit-scrollbar {
+
+.sidebarContent::-webkit-scrollbar {
     display: none;  /* Hide scrollbar for Chrome, Safari and Opera */
 }
+
 .title{
     font-size: 32px;
     width: 100%;
